@@ -5,23 +5,14 @@ Migrations
 
 Migrations are the basic instrument needed to propagate changes you make to your models into your database schema.
 
-Under default behavior the weppy `Database` class will be initialized with the automatic migrations feature of the *[pydal](https://github.com/web2py/pydal)* library enabled: this is quite handy for small applications that won't frequently change the structure of their models, since it will propagate the changes of the models to the database tables as soon as you load your application.    
-On the other hand, if you have an application that evolves a lot and requires a lot of changes on the models, or when you need some control on the migration process for the production side, this feature may produce unwanted side effects, since it stores the mgiration status in some files under the *databases* directory of your application and migrations are performed on the database every time you push new code in your models.
+While the `Database` class in weppy can be initialized to automatically migrate your schema, under the default behaviour weppy encourage the adoption of its migration system. In fact, while automatic migration can be handy for small applications that won't frequently change the structure of their models, whenever your application evolves and requires a lot of changes on the models, or you need a fine control on the migration process for the production side, this feature may produce unwanted side effects, as the migration data has to be stored in the *databases* directory of your application and migrations will be performed every time you push new code in your models.
 
-This is why weppy comes with a migration engine based on *revisions*: this will use migration files containing the instructions to be performed on the database side and will store the current migration status on the database itself, fact that prevents inconsistencies on the migration status of your application if you are running the code from several machines.
+The migration engine is instead based on *revisions*: this will use migration files containing the instructions to be performed on the database side and will store the current migration status on the database itself, fact that prevents inconsistencies on the migration status of your application if you are running the code from several machines.
 
-> **Note:** we **strongly reccomend** you to turn off automatic migrations for every application that will be run on production side. The automatic migrations and the ones performed by the migration engine have some slight differences; while we will document operations supported by the second system, the detection performed by the automatic one depends on the *pydal* library. If you need more informations about this you should check the [web2py docs](http://www.web2py.com/books/default/chapter/29/06/the-database-abstraction-layer#Migrations).
-
-The first step that has to be performed in order to use the migration engine is to turn off the automatic migrations with the `auto_migrate` parameter of the `Database` class:
-
-```python
-db = Database(app, auto_migrate=False)
-```
-
-this will, indeed, prevent the `Database` class to automatic migrate your database if you change your models.
-
-Then, you will need to use the migration commands integated with weppy in order to generate, apply and revert migrations on your database. In order to avoid you the pain of writing a lot of migration code aside with your models, weppy will automatically generate the migration scripts for you starting from your models' code.    
+weppu provides different migration commands, that can be used in order to generate, apply and revert migrations on your database. Moreover, to avoid you the pain of writing a lot of migration code aside with your models, weppy will automatically generate the migration scripts for you starting from your models' code.    
 In the next sections we will describe all of this using the *bloggy* application we saw in the [tutorial chapter](././tutorial) as an example.
+
+> **Note:** we **strongly reccomend** you to not enable automatic migrations on applications that run on production environments. The automatic migrations and the ones performed by the migration engine have some slight differences; while we will document operations supported by the second system, the detection performed by the automatic one depends on the [pydal](https://github.com/web2py/pydal) library, and are not officially supported by the weppy development. If you need more informations about this you should check the [web2py docs](http://www.web2py.com/books/default/chapter/29/06/the-database-abstraction-layer#Migrations).
 
 Generating your first migration
 -------------------------------
@@ -32,7 +23,7 @@ In the bloggy example we defined three models, and since we turned off automatic
 
 ```
 $ weppy -a bloggy.py migrations generate -m "First migration"
-> Generated migration for revision 4ceb82ecd8e4
+> Generated migration for revision fe68547ce244
 ```
 
 As you can see the generate command accepts a `-m` option which will be the message for the migration and also its name, and prints out the revision number for the generated migration. This number is unique and will identify the single migration.
@@ -42,16 +33,17 @@ Now if you look into the *migrations* folder of the bloggy application, you will
 ```python
 """First migration
 
-Migration ID: 4ceb82ecd8e4
+Migration ID: fe68547ce244
 Revises:
-Creation Date: 2016-01-23 17:29:38.642478
+Creation Date: 2017-03-09 16:31:24.333823
+
 """
 
 from weppy.orm import migrations
 
 
 class Migration(migrations.Migration):
-    revision = '4ceb82ecd8e4'
+    revision = 'fe68547ce244'
     revises = None
 
     def up(self):
@@ -80,7 +72,7 @@ class Migration(migrations.Migration):
             migrations.Column('created_at', 'datetime'),
             migrations.Column('updated_at', 'datetime'),
             migrations.Column('user', 'reference users', ondelete='CASCADE'),
-            migrations.Column('authgroup', 'reference auth_groups', ondelete='CASCADE'))
+            migrations.Column('auth_group', 'reference auth_groups', ondelete='CASCADE'))
         self.create_table(
             'auth_permissions',
             migrations.Column('id', 'id'),
@@ -89,7 +81,7 @@ class Migration(migrations.Migration):
             migrations.Column('name', 'string', default='default', notnull=True, length=512),
             migrations.Column('table_name', 'string', length=512),
             migrations.Column('record_id', 'integer', default=0),
-            migrations.Column('authgroup', 'reference auth_groups', ondelete='CASCADE'))
+            migrations.Column('auth_group', 'reference auth_groups', ondelete='CASCADE'))
         self.create_table(
             'auth_events',
             migrations.Column('id', 'id'),
