@@ -288,7 +288,9 @@ class Subscription(Model):
 @pytest.fixture(scope='module')
 def db():
     app = App(__name__)
-    db = Database(app, config=sdict(uri='sqlite://dal.db', auto_connect=True))
+    db = Database(
+        app, config=sdict(
+            uri='sqlite://dal.db', auto_connect=True, auto_migrate=True))
     db.define_models([
         Stuff, Person, Thing, Feature, Price, Doctor, Patient, Appointment,
         User, Organization, Membership, House, Mouse, NeedSplit, Zoo, Animal,
